[package]
name = "UTC_BOT"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
chrono = "0.4.19"
env_logger = "0.9"
log = "0.4.16"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

